# USTCB

./: .gitignore  NETWORK_ISSUES.md  README.md  STOCK_NAME_SOLUTION.md  config.py  daily_report.yml  email_builder.py  main.py  market_data.py  pyproject.toml  requirements.txt  runner.py  runner_fixed.py  setup.py  stock_names.json
.github/: LAST_ACTIVITY.txt
.github/workflows/: daily-news.yml  daily_report.yml  keep-alive.yml
news/: aggregator.py  baidu_translator.py  market_hot.py  market_hot_fixed.py  translator.py
scripts/: README_STOCK_LIST.md  create_json.py  fetch_news.py  fetch_stock_names_online.py  generate_all_stocks.py  generate_stock_list.py  stock_list.json  stock_names.py  stock_names_extended.py
selectors/: multi_factor.py
src/: __init__.py  config.py
src/data_fetcher/: __init__.py  base_fetcher.py
stock_selectors/: multi_factor.py  stock_names.py
templates/: email_builder.py
utils/: mailer.py
