[tool.poetry]
name = "ustcb"
version = "0.1.0"
description = "USTCB - A股财经新闻日报：每天自动抓取主要财经网站RSS新闻，并通过邮件发送到QQ邮箱。"
authors = ["USTCB Project <2403148578@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backends.pip"